<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/main_base_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grayBackground"
    tools:context=".ui.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_bets_won"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="48sp"
                    android:textColor="@android:color/holo_green_dark"
                    android:text="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bets_won"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_bets_lost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="48sp"
                    android:text="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bets_lost"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_pending_bets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="48sp"
                    android:text="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending_bets"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/detail_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/detail_tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabGravity="fill"
                app:tabMode="fixed"/>
        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb_main_menu"
        android:layout_width="56dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_add_white_56dp"
        android:layout_margin="16dp"
        android:layout_height="56dp" />

</FrameLayout>